--- a/iaproject-2dbpp/relazione/IABibliography.bib
+++ b/iaproject-2dbpp/relazione/IABibliography.bib
@@ -1,3 +1,25 @@
+@Article{Jakobs,
+ author = {Stefan Jakobs},
+ title = {On Genetic Algorithms for the Packing of Polygons},
+ journal = {European Journal of Operational Research 88 (1996) 165-181},
+ year = {1996}
+}
+
+@Article{Hopper,
+ author = {E. Hopper and B. Turton},
+ title = {A Genetic Algorithm for a 2D Industrial Packing Problem},
+ journal = {Computers and Industrial Engineering, vol. 37/1-2, pp. 375-378},
+ year = {1999}
+}
+
+@Article{TournamentSelection,
+ author = {Brad L. Miller and David E. Goldberg},
+ title = {Genetic Algorithms, Tournament Selection, and the Effects of Noise},
+ journal = {IlliGAL Report No. 95006},
+ year = {1995}
+}
+
+
 @Article{lmvTabu,
  author = {Lodi, A. and Martello, S. and Vigo, D.},
  title = {Heuristic and Metaheuristic Approaches for a Class of Two-Dimensional Bin Packing Problems},
