--- a/iaproject-2dbpp/relazione/ProgettoIA - 2DBPP.tex
+++ b/iaproject-2dbpp/relazione/ProgettoIA - 2DBPP.tex
@@ -55,6 +55,9 @@
 \section{Euristica Bottom-Left-Fill}
 \input{section/blf_heuristic}
 
+\section{Approccio Genetico}
+\input{section/genetico.tex}
+
 \section{Tabu Search}
 \input{section/tabu}
 
