prima bozza delle conclusioni: al Dalla con Amore! :*

--- a/iaproject-2dbpp/relazione/ProgettoIA - 2DBPP.tex
+++ b/iaproject-2dbpp/relazione/ProgettoIA - 2DBPP.tex
@@ -69,6 +69,8 @@
 \section{Conclusione}
 \input{section/conclusione.tex}
 
+\cleardoublepage
+\newpage
 
 \phantomsection
 \addcontentsline{toc}{section}{Bibliografia}
