va bene ragassi?? :)

--- a/iaproject-2dbpp/relazione/section/conclusione.tex
+++ b/iaproject-2dbpp/relazione/section/conclusione.tex
@@ -1,7 +1,22 @@
-Dall'esperienza accumulata sviluppando questo progetto è stato valutato che gli algoritmi metaeuristici, nella fattispecie \emph{genetico} e \emph{tabu search}, si comportano bene nella soluzione del \ddbpp. Osservando gli ottimi proposti si nota che in poco tempo ci sono ``andati molto vicini'' seppure si notano comunque possibili margini di miglioramento. Pensando in un ottica di applicazione commerciale questo comportamento è favorevole in quanto risulta più facile ottimizzare un problema partendo già da una soluzione sub-ottima che in poco tempo è riuscita ad individuare pattern particolari.
 
-Confrontando i due \emph{Core} a nostra disposizione la prima differenza che salta all'occhio è nel numero di paramentri: l'algoritmo \emph{genetico} richiede una configurazione più ampia che cambia da un'istanza all'altra, mentre il \emph{tabu search} offre parametri con validità più generale. Detto ciò il \emph{tabu search} risulta essere più intuitivo per la logica umana mentre il \emph{genetico} sembra più casuale nella sua evoluzione ma, dai test effettuati, risulta comportarsi meglio su istanze che coinvolgono pochi bin mentre i due algoritmi tendono a produrre soluzioni equivalenti con l'aumentare del numero di bin necessari.
+A seguito del lavoro svolto, sono emerse le seguenti conclusioni, raccolte in paragrafi distinti per suddividerle in base all'ambito cui sono più affini.
 
-In rete è possibile trovare programmi commerciali\footnote{In particolare abbiamo individuato il programma \emph{2D Load Packer} della Astrokettle Algorithms (\url{http://www.astrokettle.com/pr2dlp.html}) che forniva una libreria di istanze risolte, usate come metrica di riferimento.} che risolvono il problema del \ddbp, si è deciso quindi di confrontarsi con tali programmi su medesime istanze per valutare la bontà del codice prodotto, è emerso che per quasi tutte le istanze i risultati da noi ottenuti sono molti vicini a quelli ottenibili con i software commerciali. Questo evidenzia il fatto che con particolari accorgimenti potrebbe esser possibile migliorare leggermente quanto ottenuto, le tipologie di algoritmi per problemi quali il \ddbp sono infatti molto sensibili a particolari accorgimenti come ordinamenti o euristiche distinte adottate.
+\subsection{Feedback rispetto all'utente}
+Nell'utilizzo del software da noi prodotto a seguito dello sviluppo di questo progetto, si è notato che gli algoritmi metaeuristici (nella fattispecie \emph{genetico} e \emph{tabu search}) possiedono un comportamento più che discreto nella ricerca della soluzione del \ddbpp. Infatti osservando gli ottimi proposti dalle soluzione degli algoritmi si evidenzia come essi ottengano in tempi brevi soluzioni molto vicine all'ottimo globale; è doveroso altresì evidenziare come sia possibile ottenere qualche piccolo miglioramento con tecniche più raffinate a scapito del tempo di calcolo. Tuttavia in un ottica di applicazioni commerciali non necessariamente la soluzione ottima di un problema di \ddbp  è l'unico aspetto da tenere in considerazione, infatti non di rado oltre alla ricerca dell'ottimo si desidera coniugare la velocità nel trovarla, è necessario quindi cercare il giusto compromesso tra la bontà della soluzione trovata e il tempo di calcolo; inoltre un secondo fattore non trascurabile è che molto spesso, poiché risulta più facile riottimizzare un problema partendo da una soluzione sub-ottima, non è conveniente cercare la soluzione ottima attraverso algoritmi esatti.
 
+\subsection{Confronto Algoritmi}
+Confrontando i due \emph{Core} progettati, si notano le seguenti differenze:
+\begin{itemize}
+\item Parametri: è possibile notare che l'algoritmo \emph{genetico} richiede una configurazione più complessa dei parametri utilizzati per la ricerca della soluzione ottima, per ottenere soluzioni migliori devono essere infatti settati rispetto all'istanza, mentre il \emph{tabu search} offre parametri con validità generale;
+\item Dipendenza dall'istanza: strettamente legato al punto precedente, si evidenzia come l'algoritmo \emph{genetico} debba settare i parametri in base all'istanza corrente, questo aspetto lega la bontà delle soluzioni e la velocità in termini di tempo di calcolo con le dimensioni della particolare istanza; viceversa l'algoritmo \emph{tabu search} non migliora (o peggiora) significativamente la bontà delle soluzioni rispetto all'istanza considerata in un certo frangente;
+\item Approccio risolutivo: è interessante notare come l'algoritmo \emph{tabu search} risulta essere maggiormente intuitivo per la logica umana, infatti se un essere umano dovesse risolvere a mano tale problema probabilmente adotterebbe una tecnica molto simile a tale algoritmo. Per quanto concerne invece l'algoritmo \emph{genetico}, un osservatore umano potrebbe avere l'impressione che l'evoluzione sia casuale.
+\end{itemize}
+
+Date queste evidenze riscontrate, è doveroso sottolineare come, dai test effettuati, l'algoritmo \emph{genetico} risulti comportarsi complessivamente meglio del \emph{tabu search} su istanze che coinvolgono pochi bin, mentre i due algoritmi tendono a produrre soluzioni equivalenti con l'aumentare del numero di bin necessari.
+
+\subsection{Possibili miglioramenti}
+Per poter comprendere a fondo la bontà del programma prodotto, abbiamo deciso di confrontarlo con software commerciali; infatti in rete è possibile trovare programmi commerciali \footnote{In particolare abbiamo individuato il programma \emph{2D Load Packer} della Astrokettle Algorithms (\url{http://www.astrokettle.com/pr2dlp.html}) che fornisce una libreria di istanze risolte, usate come metrica di riferimento.} che risolvono il problema del \ddbp. Si è quindi svolto il confronto con tali programmi su medesime istanze, ne è emerso che per quasi tutte le istanze i risultati da noi ottenuti sono molti vicini a quelli ottenibili con tali software commerciali. Questo aspetto evidenzia il fatto che con particolari accorgimenti si potrebbe migliorare leggermente quanto ottenuto, le tipologie di algoritmi per problemi quali il \ddbp sono infatti molto sensibili a peculiarità come ordinamenti o euristiche con leggere modifiche rispetto alle classiche presenti in letteratura. 
+Lo scopo di tale progetto è però quello di mostrare alcuni algoritmi metaeuristici per la risoluzione del problema \ddbp , data l'efficienza di quanto è stato prodotto non è risultato particolarmente utile cercare di limare alcune sottigliezze di questo tipo.
+
+\subsection{Reperire il codice}
 Il programma sviluppato è distribuito sotto licenza GNU GPLv3\footnote{\url{http://www.gnu.org/licenses/gpl.html}} e liberamente scaricabile dal sito \url{https://code.google.com/p/iaproject-2dbpp/}.
