aggiunta la citazione a Chazelle

--- a/iaproject-2dbpp/relazione/IABibliography.bib
+++ b/iaproject-2dbpp/relazione/IABibliography.bib
@@ -19,6 +19,14 @@
  year = {1995}
 }
 
+@Article{chazelleBL,
+ author = {Chazelle, B.},
+ title = {The Bottom-Left Bin-Packing Heuristic: An Efficient Implementation},
+ journal = {IEEE TRANSACTIONS ON COMPUTERS},
+ volume = {C-32},
+ number = {8},
+ year = {1983}
+}
 
 @Article{lmvTabu,
  author = {Lodi, A. and Martello, S. and Vigo, D.},
