--- a/iaproject-2dbpp/relazione/section/blf_heuristic.tex
+++ b/iaproject-2dbpp/relazione/section/blf_heuristic.tex
@@ -2,7 +2,7 @@ Una delle euristiche più utilizzate per risolvere il \ddbpp{} è la \emph{botto
 
 L'algoritmo BL in media però non è molto efficiente in quanto può lasciare degli spazi vuoti che se vengono chiusi da un pacchetto non possono più essere utilizzati nei passi successivi dell'algoritmo. Per risolvere questo problema è stata ideata la variante Bottom-Left-Fill (BLF) che consiste nell'inserire ogni pacchetto nella posizione più in basso possibile considerando anche le posizioni all'interno dei buchi lasciati dal placing dei pacchetti precedenti. A parità di altezza vengono privilegiate le posizioni più a sinistra. Il BLF si presta bene all'utilizzo combinato con algoritmi genetici in quanto associa una permutazione dei pacchetti ad un particolare placing degli stessi e garantisce che almeno una delle permutazione conduca ad un placing ottimo. Si può perciò pensare di utilizzare come cromosoma una sequenza ordinata di pacchetti (eventualmente ruotati) ed applicare ad essa mutazioni e cross-over order-based per giungere ad una soluzione di fitness massima.
 
-Pur essendo un'euristica molto semplice a livello intuitivo, l'implementazione naive di questo algoritmo richiede tempo $O(n^4)$ nel numero di pacchetti, in questo progetto invece abbiamo deciso di utilizzare l'implementazione proposta da CITAZIONE QUIIII!!! B. Chazelle nel 1983 !!!!QUIII che richiede spazio lineare e tempo $O(n^2)$ nel numero di pacchetti. In questa sezione verrà descritta l'idea alla base dell'algoritmo ideato da Chazelle e le nostre scelte implementative. 
+Pur essendo un'euristica molto semplice a livello intuitivo, l'implementazione naive di questo algoritmo richiede tempo $O(n^4)$ nel numero di pacchetti, in questo progetto invece abbiamo deciso di utilizzare l'implementazione proposta da Chazelle \cite{chazelleBL} che richiede spazio lineare e tempo $O(n^2)$ nel numero di pacchetti. In questa sezione verrà descritta l'idea alla base dell'algoritmo ideato da Chazelle e le nostre scelte implementative. 
 
 \subsection{Descrizione dell'algoritmo}
 Ad ogni stadio dell'algoritmo BLF, ogni \emph{bin} contiene degli spazi vuoti detti \emph{hole}, che possono essere visti come poligoni formati da solo lati orizzontali e verticali. L'algoritmo procede esaminando uno alla volta gli \emph{hole} e determinando tutte le posizioni in cui può essere inserito il rettangolo corrente, per poi scegliere la posizione più in basso a sinistra. Ogni hole viene rappresentato con una lista dei suoi lati. Un lato di un hole viene detto \emph{leftmost edge} se forma, con i due lati ad esso adiacenti, due angoli convessi ed entrambi i due lati giacciono alla sua destra. Al contrario, un lato di un hole viene detto un \emph{notch} se forma, con i due lati ad esso adiacenti, due angoli concavi. Un \emph{notch} verticale in particolare viene detto \emph{left notch} se i due lati ad esso adiacenti giacciono alla sua sinistra. Infine, un angolo concavo con al di sopra un lato verticale e un lato orizzontale alla sua destra viene detto \emph{falling corner}.
