--- a/iaproject-2dbpp/relazione/IABibliography.bib
+++ b/iaproject-2dbpp/relazione/IABibliography.bib
@@ -28,6 +28,12 @@
  year = {1983}
 }
 
+@Article{BLTheorem,
+ author = {Wenqi Huang and Tao Ye and Duanbing Chen},
+ title = {Bottom-Left Placement Theorem for Rectangle Packing}
+ year = {2011}
+}
+
 @Article{lmvTabu,
  author = {Lodi, A. and Martello, S. and Vigo, D.},
  title = {Heuristic and Metaheuristic Approaches for a Class of Two-Dimensional Bin Packing Problems},
