--- a/iaproject-2dbpp/relazione/section/blf_heuristic.tex
+++ b/iaproject-2dbpp/relazione/section/blf_heuristic.tex
@@ -1,4 +1,4 @@
-Una delle euristiche più utilizzate per risolvere il \ddbpp{} è la \emph{bottom-left} (BL), che consiste nel prendere uno ad uno in un certo ordine i pacchetti da inserire nel bin e farli cadere il più in basso possibile per poi spostarli più a sinistra possibile, trovando una posizione valida quando il pacchetto appoggia su una superficie sia a sinistra che in basso. Questa euristica è particolarmente importante in quanto è stato dimostrato che se esiste un modo per disporre un certo insieme di pacchetti in un \emph{bin} esiste anche una permutazione dell'insieme che permette di inserire tali pacchetti nel suddetto bin tramite l'euristica BL. Prendendo quindi un \emph{bin} delle dimensioni minime per contenere la soluzione ottima è possibile dimostrare che questa è ottenibile tramite l'algoritmo BL.
+Una delle euristiche più utilizzate per risolvere il \ddbpp{} è la \emph{bottom-left} (BL), che consiste nel prendere uno ad uno in un certo ordine i pacchetti da inserire nel bin e farli cadere il più in basso possibile per poi spostarli più a sinistra possibile, trovando una posizione valida quando il pacchetto appoggia su una superficie sia a sinistra che in basso. Questa euristica è particolarmente importante in quanto è stato dimostrato \cite{BLTheorem} che se esiste un modo per disporre un certo insieme di pacchetti in un \emph{bin} esiste anche una permutazione dell'insieme che permette di inserire tali pacchetti nel suddetto bin tramite l'euristica BL. Prendendo quindi un \emph{bin} delle dimensioni minime per contenere la soluzione ottima è possibile dimostrare che questa è ottenibile tramite l'algoritmo BL.
 
 L'algoritmo BL in media però non è molto efficiente in quanto può lasciare degli spazi vuoti che se vengono chiusi da un pacchetto non possono più essere utilizzati nei passi successivi dell'algoritmo. Per risolvere questo problema è stata ideata la variante Bottom-Left-Fill (BLF) che consiste nell'inserire ogni pacchetto nella posizione più in basso possibile considerando anche le posizioni all'interno dei buchi lasciati dal placing dei pacchetti precedenti. A parità di altezza vengono privilegiate le posizioni più a sinistra. Il BLF si presta bene all'utilizzo combinato con algoritmi genetici in quanto associa una permutazione dei pacchetti ad un particolare placing degli stessi e garantisce che almeno una delle permutazione conduca ad un placing ottimo. Si può perciò pensare di utilizzare come cromosoma una sequenza ordinata di pacchetti (eventualmente ruotati) ed applicare ad essa mutazioni e cross-over order-based per giungere ad una soluzione di fitness massima.
 
