--- a/iaproject-2dbpp/relazione/titlepage.tex
+++ b/iaproject-2dbpp/relazione/titlepage.tex
@@ -17,7 +17,7 @@
 	\begin{tabular}{ c c c }
 		\large Luca \textsc{Gasparini} & Alberto \textsc{Boccato} &
 				Nicola \textsc{Chessa} \\
-		\normalsize 999999 & 1013973 & 1014413 \\
+		\normalsize 1014325 & 1013973 & 1014413 \\
 	\end{tabular}
 	\vskip 0.5cm
 	\begin{tabular}{ c c }
