--- a/iaproject-2dbpp/relazione/titlepage.tex
+++ b/iaproject-2dbpp/relazione/titlepage.tex
@@ -17,12 +17,12 @@
 	\begin{tabular}{ c c c }
 		\large Luca \textsc{Gasparini} & Alberto \textsc{Boccato} &
 				Nicola \textsc{Chessa} \\
-		\normalsize 1014325 & 1013973 & 1014413 \\
+		\normalsize 1014325 & \normalsize 1013973 & \normalsize 1014413 \\
 	\end{tabular}
 	\vskip 0.5cm
 	\begin{tabular}{ c c }
 		\large Nicola \textsc{Dalla Benetta} & Nicola \textsc{Gobbo} \\
-		\normalsize 1020097 & 1014195 \\
+		\normalsize 1020097 & \normalsize 1014195 \\
 	\end{tabular}
 	\normalfont
 	\vskip 4cm
