corretto errore nella relazione

--- a/iaproject-2dbpp/relazione/IABibliography.bib
+++ b/iaproject-2dbpp/relazione/IABibliography.bib
@@ -30,7 +30,7 @@
 
 @Article{BLTheorem,
  author = {Wenqi Huang and Tao Ye and Duanbing Chen},
- title = {Bottom-Left Placement Theorem for Rectangle Packing}
+ title = {Bottom-Left Placement Theorem for Rectangle Packing},
  year = {2011}
 }
 
