--- a/iaproject-2dbpp/relazione/ProgettoIA - 2DBPP.tex
+++ b/iaproject-2dbpp/relazione/ProgettoIA - 2DBPP.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt,draft]{article}
+\documentclass[a4paper,12pt]{article}
 
 \usepackage{enumitem}
 \usepackage[utf8]{inputenc}
@@ -31,7 +31,7 @@
 
 \usepackage[final]{hyperref}
 \hypersetup{
-	colorlinks=true
+	colorlinks=false
 }
 \usepackage{hypcap}
 
